pushing final  version

--- a/src/View/AdminView.form
+++ b/src/View/AdminView.form
@@ -76,6 +76,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Add/Delete Librarian"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="adActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="LOG">
       <Properties>
@@ -87,6 +90,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Logout"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LOGActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="view">
       <Properties>
@@ -98,6 +104,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="View Libaraians"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
