--- a/src/View/LibrarianView.form
+++ b/src/View/LibrarianView.form
@@ -88,6 +88,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Add/Delete Book"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="adddeleteActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="issue">
       <Properties>
@@ -99,6 +102,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Issue Book"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="issueActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="ret">
       <Properties>
@@ -110,6 +116,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Return Book"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="retActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="LOUT">
       <Properties>
@@ -121,6 +130,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Logout"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LOUTActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="vie">
       <Properties>
@@ -146,6 +158,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="View Issued Book"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="VIBActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
