--- a/src/View/ManageBookView.form
+++ b/src/View/ManageBookView.form
@@ -32,13 +32,17 @@
               </Group>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="BNU" alignment="0" pref="92" max="32767" attributes="0"/>
+                      <Component id="BNA" alignment="0" max="32767" attributes="0"/>
+                      <Component id="AUT" alignment="0" max="32767" attributes="0"/>
+                  </Group>
+                  <Component id="AB" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="C" min="-2" pref="146" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="BNU" alignment="0" pref="92" max="32767" attributes="0"/>
-                          <Component id="BNA" alignment="0" max="32767" attributes="0"/>
-                          <Component id="AUT" alignment="0" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="172" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -48,15 +52,9 @@
                           <Component id="PUB" pref="88" max="32767" attributes="0"/>
                           <Component id="QU" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="AB" min="-2" pref="150" max="-2" attributes="0"/>
-                      <EmptySpace pref="63" max="32767" attributes="0"/>
-                      <Component id="DB" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="190" max="-2" attributes="0"/>
                   </Group>
               </Group>
+              <EmptySpace pref="135" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -85,7 +83,7 @@
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="AB" alignment="3" min="-2" pref="49" max="-2" attributes="0"/>
-                  <Component id="DB" alignment="3" min="-2" pref="49" max="-2" attributes="0"/>
+                  <Component id="C" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="129" max="32767" attributes="0"/>
           </Group>
@@ -138,8 +136,11 @@
         </Property>
         <Property name="text" type="java.lang.String" value="ADD BOOK"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ABActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="DB">
+    <Component class="javax.swing.JButton" name="C">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
@@ -147,8 +148,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="DELETE BOOK"/>
+        <Property name="text" type="java.lang.String" value="Close"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
