--- a/src/View/WelcomeView.form
+++ b/src/View/WelcomeView.form
@@ -38,8 +38,8 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="PS" pref="154" max="32767" attributes="0"/>
-                          <Component id="UN" max="32767" attributes="0"/>
+                          <Component id="UN" pref="154" max="32767" attributes="0"/>
+                          <Component id="PS" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -76,8 +76,8 @@
               </Group>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PS" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="PS" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
               <Component id="log" min="-2" pref="52" max="-2" attributes="0"/>
@@ -114,8 +114,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="UN">
     </Component>
-    <Component class="javax.swing.JTextField" name="PS">
-    </Component>
     <Component class="javax.swing.JButton" name="log">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -144,6 +142,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Login As:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="PS">
     </Component>
   </SubComponents>
 </Form>
